Fixed bug #44100 (Inconsistent handling of static array declarations with duplicate keys).

git-svn-id: http://svn.php.net/repository/php/php-src/php/php-src/trunk@264023 c90b9560-bf6c-de11-be94-00142212c4b1